# Form32AutoFlow

./: README.md  RULES.md  pyproject.toml
src/form32_docling/: __init__.py  cli.py  cli_db.py  gen32form.py
src/form32_docling/api/: db.py  main.py
src/form32_docling/config/: __init__.py  config.py  custom_config.py  form32_templates.py
src/form32_docling/core/: __init__.py  checkbox_analyzer.py  constants.py  docling_extractor.py  exceptions.py  form32_processor.py
src/form32_docling/forms/: __init__.py  form68_generator.py  form69_generator.py  form73_generator.py  form_generation_controller.py  form_mappings.py  pdf_form_utils.py
src/form32_docling/forms/templates/: __init__.py
src/form32_docling/gui/: NEXTJS_RULES.md  package-lock.json  package.json
src/form32_docling/gui/app/: globals.css  layout.js  page.js
src/form32_docling/gui/app/workbench/: page.js
src/form32_docling/models/: __init__.py  patient_info.py
src/form32_docling/scripts/: run_benchmarks.sh  vlm_benchmark.py
src/form32_docling/utils/: __init__.py  date_utils.py  logging_control.py  string_utils.py
tests/: CheckBoxNewApproach.py  debug_leroy_checkboxes.py  import-check.py  test_api.py  test_process.py  test_regression_leroy.py  verify_config.py
tests/test_form32_docling/: __init__.py  test_checkbox_analyzer.py  test_config.py  test_exam_order_page_two.py  test_form68_field_mapping.py  test_form73_field_mapping.py  test_form_generators.py  test_model_config.py  test_models.py  test_processor_marker_config.py  test_string_utils.py
