[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "form32-tools"
version = "0.2.0"
description = "Medical form processing and DWC form generation tools"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Patrick Murphy"}
]
keywords = ["medical", "forms", "ocr", "pdf", "docling", "dwc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Typing :: Typed",
]

dependencies = [
    # Core PDF/document processing
    "docling>=2.0.0",
    "reportlab>=4.0.0",
    "pypdf>=5.0.0",
    # Image processing (for checkbox detection)
    "opencv-python>=4.11.0",
    "numpy>=2.2.0",
    "pillow>=11.0.0",
    "pdf2image>=1.16.0",
    # Data validation
    "pydantic>=2.0.0",
    # Environment/config
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
vlm = [
    # Required for DocumentExtractor VLM-based extraction
    # Tested with: torch 2.10.0, torchvision 0.25.0
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "qwen-vl-utils>=0.0.8",
]
ui = [
    "PyQt6>=6.8.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "sqlalchemy>=2.0.0",
    "python-multipart>=0.0.6",  # Required for file uploads in FastAPI
]

[project.urls]
Repository = "https://github.com/Apacendo/Form32reader"

[project.scripts]
form32-docling = "form32_docling.cli:main"
gen32form = "form32_docling.gen32form:main"
form32-db = "form32_docling.cli_db:main"
form32-server = "form32_docling.api.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["form32_docling*"]

[tool.setuptools.package-data]
"form32_docling.forms.templates" = ["*.pdf"]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in argument defaults (FastAPI pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["form32_docling"]

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "docling.*",
    "cv2.*",
    "pdf2image.*",
    "reportlab.*",
    "pypdf.*",
    "pdfplumber.*",
    "pytesseract.*",
    "PyQt6.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/form32_docling"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
